feat: バックテスト最適化の全過程を実装記録
- 4つの改善機能を実装テスト
  - ニュース除外機能（効果なし）
  - ブレークイーブン機能（逆効果）
  - MTF傾きフィルタ（実装問題）
  - 時間帯除外機能（部分的成功）

- 時間帯除外の2つの方式を比較
  - flat方式: 強制クローズで大幅悪化
  - no_entry方式: 新規エントリー制限で効果的

- 最適設定の確立
  - ベース設定: PF 1.186, MaxDD -6.49
  - 時間帯除外: PF 1.193, 純利益 +15.83

- Serena MCP記憶とGitHub記録を追加
  - .serena/memories/backtest_optimization_journey.md
  - 技術的実装詳細と次の改善戦略を記録

--- a/backtest_config_pf_improved.json
+++ b/backtest_config_pf_improved.json
@@ -26,5 +26,9 @@
     "use_atr_tp": false,
     "atr_multiplier": 2.0,
     "exclude_news": false,
-    "news_exclusion_minutes": 30
+    "news_exclusion_minutes": 30,
+    "news_exclude_csv": "news_exclude_test.csv",
+    "use_slope_filter": false,
+    "use_breakeven": false,
+    "breakeven_r": 0.5
 }
